2013-06-10  Andy Buckley  <andy.buckley@cern.ch>

	* Add HepData URL for Inspire ID lookup to the rivet script.

	* Fix analyses' info files which accidentally listed the Inspire
	ID under the SpiresID metadata key.

2013-06-07  Andy Buckley  <andy.buckley@cern.ch>

	* Updating mk-analysis-html script to produce MathJax output

	* Adding a version of Analysis::removeAnalysisObject() which takes
	an AO pointer as its argument.

	* bin/rivet: Adding pandoc-based conversion of TeX summary and
	description strings to plain text on the terminal output.

	* Add MathJax to rivet-mkhtml output, set up so the .info entries should render ok.

	* Mark the OPAL 1993 analysis as UNVALIDATED: from the H++
	benchmark runs it looks nothing like the data, and there are some
	outstanding ambiguities.

2013-06-06  Andy Buckley  <andy.buckley@cern.ch>

	* Releasing 2.0.0b2 beta version.

2013-06-05  Andy Buckley  <andy.buckley@cern.ch>

	* Renaming Analysis::add() etc. to very explicit
	addAnalysisObject(), sorting out shared_pointer polymorphism
	issues via the Boost dynamic_pointer_cast, and adding a full set
	of getHisto1D(), etc. explicitly named and typed accessors,
	including ones with HepData dataset/axis ID signatures.

	* Adding histo booking from an explicit reference Scatter2D (and
	more placeholders for 2D histos / 3D scatters) and rewriting
	existing autobooking to use this.

	* Converting inappropriate uses of size_t to unsigned int in Analysis.

	* Moving Analysis::addPlot to Analysis::add() (or reg()?) and
	adding get() and remove() (or unreg()?)

	* Fixing attempted abstraction of import fallbacks in rivet.util.import_ET().

	* Removing broken attempt at histoDir() caching which led to all
	histograms being registered under the same analysis name.

2013-06-04  Andy Buckley  <andy.buckley@cern.ch>

	* Updating the Cython version requirement to 0.18

	* Adding Analysis::integrate() functions and tidying the Analysis.hh file a bit.
