@@ -126,94 +126,6 @@ for l in opts.NATIVE_LOG_STRS:
     except:
         logging.warning("Couldn't process logging string '%s'" % l)
 
-
-## Use pandoc (if available) to make the TeX strings in
-## summary and description more readable on the text terminal
-# TODO: Maybe group many strings to be processed together, to save on system call / pandoc startup?
-def detex(tex):
-    from distutils.spawn import find_executable
-    if not find_executable("pandoc"):
-        return tex
-    texheader = r"""
-    \newcommand{\text}[1]{#1}
-    \newcommand{\ensuremath}[1]{#1}
-    \newcommand{\emph}[1]{_#1_}
-    \newcommand{\textrm}[1]{#1}
-    \newcommand{\textit}[1]{_#1_}
-    \newcommand{\textbf}[1]{*#1*}
-    \newcommand{\mathrm}[1]{#1}
-    \newcommand{\mathit}[1]{_#1_}
-    \newcommand{\mathbf}[1]{*#1*}
-    \newcommand{\bm}[1]{*#1*}
-    \newcommand{\frac}[2]{#1/#2}
-    \newcommand{\sqrt}[1]{sqrt(#1)}
-    \newcommand{\hat}[1]{#1hat}
-    \newcommand{\bar}[1]{#1bar}
-    \newcommand{\d}[1]{d#1}
-    \newcommand{\degree}{^\circ }
-    \newcommand{\infty}{oo }
-    \newcommand{\exp}{exp }
-    \newcommand{\log}{log }
-    \newcommand{\ln}{ln }
-    \newcommand{\sin}{sin }
-    \newcommand{\cos}{cos }
-    \newcommand{\tan}{tan }
-    \newcommand{\sinh}{sinh }
-    \newcommand{\cosh}{cosh }
-    \newcommand{\tanh}{tanh }
-    \newcommand{\ell}{l}
-    \newcommand{\varphi}{\phi}
-    \newcommand{\varepsilon}{\epsilon}
-    \newcommand{\sim}{~}
-    \newcommand{\lesssim}{<~ }
-    \newcommand{\gtrsim}{>~ }
-    \newcommand{\neq}{!= }
-    \newcommand{\ge}{>= }
-    \newcommand{\gg}{>> }
-    \newcommand{\le}{<= }
-    \newcommand{\ll}{<< }
-    \newcommand{\pm}{+- }
-    \newcommand{\mp}{-+ }
-    \newcommand{\times}{x }
-    \newcommand{\cdot}{. }
-    \newcommand{\langle}{<}
-    \newcommand{\rangle}{>}
-    \newcommand{\gets}{<- }
-    \newcommand{\to}{-> }
-    \newcommand{\leftarrow}{<- }
-    \newcommand{\rightarrow}{-> }
-    \newcommand{\leftrightarrow}{<-> }
-    \newcommand{\Leftarrow}{<= }
-    \newcommand{\Rightarrow}{=> }
-    \newcommand{\Leftrightarrow}{ }
-    \newcommand{\left}{}
-    \newcommand{\right}{}
-    \newcommand{\!}{}
-    \newcommand{\/}{}
-    \newcommand{\rm}{}
-    \newcommand{\it}{}
-    \newcommand{\,}{ }
-    \newcommand{\;}{ }
-    \newcommand{\ }{ }
-    \newcommand{\unit}[2]{#1 #2}
-    \newcommand{\bar}[1]{#1bar}
-    \newcommand{\pT}{pT }
-    \newcommand{\perp}{T}
-    \newcommand{\MeV}{MeV }
-    \newcommand{\GeV}{GeV }
-    \newcommand{\TeV}{TeV }
-    """
-    import subprocess, shlex
-    p = subprocess.Popen(shlex.split("pandoc -f latex -t plain --no-wrap"),
-                         stdin=subprocess.PIPE, stdout=subprocess.PIPE)
-    plain, err = p.communicate((texheader + tex).replace("\n", ""))
-    plain = plain.replace(r"\&", "&")
-    # TODO: Replace \gamma, \mu, \tau, \Upsilon, \rho, \psi, \pi, \eta, \Delta, \Omega, \omega -> no-\ form?
-    # TODO: Replace e^+-
-    return plain[:-1] if plain[-1] == "\n" else plain
-#print detex(r"Foo \! $\int \text{bar} \d{x} \sim \; \frac{1}{3} \neq \emph{foo}$ \to \gg bar")
-
-
 ## Parse supplied cross-section
 if opts.CROSS_SECTION is not None:
     xsstr = opts.CROSS_SECTION
@@ -304,7 +216,7 @@ if opts.LIST_ANALYSES:
             msg = aname
             if opts.LOGLEVEL <= logging.INFO:
                 a = rivet.AnalysisLoader.getAnalysis(aname)
-                msg = "%-25s   %s" % (aname, detex(a.summary()))
+                msg = "%-25s   %s" % (aname, rivet.util.detex(a.summary()))
             print msg
     sys.exit(0)
 
@@ -332,7 +244,7 @@ if len(opts.SHOW_ANALYSES) > 0:
         print name
         print len(name) * "="
         print ""
-        print detex(ana.summary())
+        print rivet.util.detex(ana.summary())
         print ""
         print "Status: %s" % ana.status()
         print ""
@@ -362,7 +274,7 @@ if len(opts.SHOW_ANALYSES) > 0:
 
         print "Description:"
         twrap = textwrap.TextWrapper(width=75, initial_indent=2*" ", subsequent_indent=2*" ")
-        print twrap.fill(detex(ana.description()))
+        print twrap.fill(rivet.util.detex(ana.description()))
 
         print ""
 
